Fixed whitespace to the right of profile picture

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,8 @@ nav.navbar.bootsnav .navbar-toggle i{color: #73e0f8;}
     /* background: rgba(31,44,108,.3); */
 }
 .single-about-img img {
-    max-width: 337px;
+    min-width: 100%;
+    max-width: 380px;
     height: 450px;
 }
 .about-list-icon{
@@ -293,7 +294,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #73e0f8;}
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 109%;
+    width: 100%;
     height: 65px;
     background: #1f2c6c;
 }
@@ -302,7 +303,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #73e0f8;}
     display: flex;
 }
 .about-list-icon  ul li a {
-    padding-right: 22px;
+    padding-right: 20px;
     cursor:pointer;
     color: #fff;
 }
